--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "author": "Daniel Koller <daniel-koller@gmx.at>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.2.2",
     "cheerio": "^1.0.0-rc.12",
     "fs": "^0.0.1-security",
+    "fs-extra": "^11.1.0",
     "node": "^19.3.0"
   },
   "devDependencies": {
