--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
   "dependencies": {
     "axios": "^1.2.2",
     "cheerio": "^1.0.0-rc.12",
-    "fs": "^0.0.1-security",
-    "fs-extra": "^11.1.0",
-    "node": "^19.3.0"
+    "fs-extra": "^11.1.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.19.1",
     "@next/eslint-plugin-next": "13.1.1",
     "@ts-safeql/eslint-plugin": "0.0.23",
     "@types/eslint": "8.4.10",
+    "@types/fs-extra": "^11.0.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
